fix squads on mobile

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -313,6 +313,13 @@ body {
   width: 200px;
 }
 
+.squads-modal-container {
+  max-height: calc(100vh - 120px);
+  overflow-y: auto;
+  overscroll-behavior: contain;
+  -webkit-overflow-scrolling: touch;
+}
+
 /* cursors */
 
 body {
@@ -887,6 +894,8 @@ button,
   #intro .white-box {
     margin-bottom: 15px;
   }
+
+
 }
 
 @media (max-width: 259px) {
@@ -1071,7 +1080,7 @@ button,
   }
 
   .squads-modal-container .squads-list img {
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: 100%;
   }
 }
